# label-recognition-ocr

./: CMakeLists.txt  LabelRecognitionDemo.cpp  LabelRecognitionDemoOpenCV.cpp  README.md  license.txt
include/: DynamsoftCommon.h  DynamsoftLabelRecognition.h
